# Aero-Coffe

./: pyproject.toml
src/aero_coffe/: main.py  take_images.py
