[project]
name = "aero-coffe"
version = "0.1.0"
description = ""
authors = [
    {name = "Tobias",email = "tobias.bp2004@gmail.com"}
]
readme = "README.md"
requires-python = "<3.13,>=3.9"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "inference (>=0.55.2,<0.56.0)",
    "serial (>=0.0.97,<0.0.98)"
]

[tool.poetry]
packages = [{include = "aero_coffe", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.9.0"
isort = "^6.0.1"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
